Replaced landing page image, added firebase data of owners/creators of entries, resolved <NewPizzasOverview /> component issue where data was not being shown correctly.  WIP: Addind entry owners to new pizzas overview within the App

--- a/src/StyleSheets/landing.css
+++ b/src/StyleSheets/landing.css
@@ -1,10 +1,10 @@
 .bgImg {
     height: 75vh;
     background-repeat: no-repeat;
-    background-image: url(https://bit.ly/2kVUKlz);
-    background-size: 300px 350px;
-    background-position-x: 100%;
-    background-position-y: 0%;
+    background-image: url(https://www.pngrepo.com/download/201515/pizza-slice-pizza.png);
+    background-size: 200px 250px;
+    background-position-x: 95%;
+    background-position-y: 15%;
 }
 
 .jumbotron {
